# openpi

./: .gitignore  pyproject.toml
examples/fr3/: fr3_env.py  main.py  realsense_camera_utils.py  test_fr3_camera.py  test_fr3_control.py
examples/fr3_ws/src/fr3/: CMakeLists.txt  package.xml
examples/fr3_ws/src/fr3/scripts/: fr3_env.py  infer_server.py  main.py  oak_camera_utils.py  policy_client.py  test_fr3_camera.py  web_camera_utils.py
examples/fr3_ws/src/fr3/srv/: Pi05.srv
examples/libero/: custom_task.py  customed_env.py  play.py
examples/simple_client/: main.py
